--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="empty"></string>
+    <string name="fs_sent">Financial Statement Request Sent!</string>
+    <string name="fc_sent">Financial Statement Request Sent!</string>
 </resources>
